client/styles/Thanks.module.css
.container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  color: #212427;
}

.header {
  font-size: 100px;
  margin-bottom: 50px;
}

.header_small {
  font-size: 30px;
  margin-bottom: 50px;
}

.container .links {
  font-size: 16px;
  cursor: pointer;
  text-decoration: underline;
  margin-bottom: 50px;
  transition: all 0.1s ease-in-out;
}

.container .links:hover {
  transform: scale(1.1);
}

.dishes .item {
  width: 600px;
  min-height: 100px;
  padding: 20px 20px;
  box-shadow: rgba(0, 0, 0, 0.16) 0 1px 4px;
  border-radius: 10px;
  margin-bottom: 20px;
  margin-left: 20px;
  margin-right: 20px;
}

.dishes .item.even {
  /*color: white;*/
  /*background-color: #1982fc;*/
  /*margin-right: 0;*/
  /*margin-left: 10px;*/
}

.dishes .item .name {
  font-size: 18px;
  margin-bottom: 20px;
}

.dishes .item .text {
  font-size: 14px;
}

.form {
  font-size: 14px;
  width: 500px;
  margin-bottom: 50px;
  padding: 35px 30px;
  border-radius: 10px;
  box-shadow: rgba(0, 0, 0, 0.16) 0 1px 4px;
}

.form input[type=text] {
  width: 100%;
  padding: 12px 20px;
  margin: 10px 0;
  border-width: 0;
  border-radius: 10px;
  box-sizing: border-box;
  box-shadow: rgba(0, 0, 0, 0.16) 0 1px 4px;
}

.form textarea {
  font-family: 'Tahoma', sans-serif;
  width: 100%;
  padding: 12px 20px;
  margin: 10px 0;
  border-width: 0;
  border-radius: 10px;
  box-sizing: border-box;
  box-shadow: rgba(0, 0, 0, 0.16) 0 1px 4px;
  resize: none;
}

.submit {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.submit_btn {
  width: fit-content;
  font-size: 14px;
  padding: 10px 10px;
  margin-top: 20px;
  border-width: 0;
  border-radius: 4px;
  background-color: #6200ee;
  color: white;
  transition: all 0.1s ease-in-out;
}

.submit_btn.disabled {
  opacity: 0.5;
}

.submit_btn:hover {
  cursor: pointer;
}

.submit_btn:not(.disabled):hover {
  transform: scale(1.1);
}

.submit_btn.disabled:hover {
  cursor: not-allowed;
}

.add {
  position: fixed;
  right: 50px;
  bottom: 50px;
  font-size: 60px;
  color: #6200ee;
  transition: all 0.1s ease-in-out;
}

.add:hover {
  cursor: pointer;
  transform: scale(1.1);
}

.hide {
  display: none;
}

@media (max-width: 600px) {
  .header {
    font-size: 70px;
  }

  .dishes {
    width: 100%;
  }

  .dishes .item {
    width: auto;
  }

  .add {
    right: 20px;
    bottom: 15px;
  }

  .form {
    font-size: 14px;
    width: 90%;
    margin-bottom: 50px;
    padding: 35px 30px;
    border-radius: 10px;
    box-shadow: rgba(0, 0, 0, 0.16) 0 1px 4px;
  }
}

